formulaire de contact en cours

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=e6fa6a9c0fa1fc89d606803d47702675
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+# MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -30,3 +30,10 @@ APP_SECRET=e6fa6a9c0fa1fc89d606803d47702675
 DATABASE_URL="mysql://root:@127.0.0.1:3306/projectwebforce3?serverVersion=mariadb-10.4.17"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
