suite formulaire de contact

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=e6fa6a9c0fa1fc89d606803d47702675
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost:1025
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
