--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
   avatars_directory: "%kernel.project_dir%/public/uploads/avatars"
-
+  affiches_directory: "%kernel.project_dir%/public/img/affiches"
 services:
   # default configuration for services in *this* file
   _defaults:
